--- a/Capstone_Lab2.ipynb
+++ b/Capstone_Lab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data, columns=['PostalCode', 'Borough', 'Neighbourhood'])\n",
+    "df = df[(~df['PostalCode'].isnull()) & (df['Borough'] != 'Not assigned')]\n",
+    "df = df.groupby(['PostalCode', 'Borough'])['Neighbourhood'].apply(list)\n",
+    "df = pd.DataFrame(df)\n",
+    "df1 = df.sort_values(by=['Neighbourhood'])\n",
+    "df1 = df1.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names = ['Neighbourhood'] \n",
+    "neights1 = pd.DataFrame(columns=column_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prueba1 = df1.loc[:,'Neighbourhood']\n",
+    "\n",
+    "for row in prueba1:\n",
+    "    prueba11 = ','.join(row)\n",
+    "    neights1 = neights1.append({'Neighbourhood' : prueba11}, ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,61 +115,31 @@
        "      <th>0</th>\n",
        "      <td>M5H</td>\n",
        "      <td>Downtown Toronto</td>\n",
-       "      <td>[Adelaide, King, Richmond]</td>\n",
+       "      <td>Adelaide,King,Richmond</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>M1S</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>[Agincourt]</td>\n",
+       "      <td>Agincourt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>M1V</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>[Agincourt North, L'Amoreaux East, Milliken, S...</td>\n",
+       "      <td>Agincourt North,L'Amoreaux East,Milliken,Steel...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>M9V</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>[Albion Gardens, Beaumond Heights, Humbergate,...</td>\n",
+       "      <td>Albion Gardens,Beaumond Heights,Humbergate,Jam...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>M8W</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>[Alderwood, Long Branch]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>M3H</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>[Bathurst Manor, Downsview North, Wilson Heights]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>M2K</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>[Bayview Village]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>M5M</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>[Bedford Park, Lawrence Manor East]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>M5E</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>[Berczy Park]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>M1N</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>[Birch Cliff, Cliffside West]</td>\n",
+       "      <td>Alderwood,Long Branch</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,38 +152,24 @@
        "2        M1V       Scarborough   \n",
        "3        M9V         Etobicoke   \n",
        "4        M8W         Etobicoke   \n",
-       "5        M3H        North York   \n",
-       "6        M2K        North York   \n",
-       "7        M5M        North York   \n",
-       "8        M5E  Downtown Toronto   \n",
-       "9        M1N       Scarborough   \n",
        "\n",
        "                                       Neighbourhood  \n",
-       "0                         [Adelaide, King, Richmond]  \n",
-       "1                                        [Agincourt]  \n",
-       "2  [Agincourt North, L'Amoreaux East, Milliken, S...  \n",
-       "3  [Albion Gardens, Beaumond Heights, Humbergate,...  \n",
-       "4                           [Alderwood, Long Branch]  \n",
-       "5  [Bathurst Manor, Downsview North, Wilson Heights]  \n",
-       "6                                  [Bayview Village]  \n",
-       "7                [Bedford Park, Lawrence Manor East]  \n",
-       "8                                      [Berczy Park]  \n",
-       "9                      [Birch Cliff, Cliffside West]  "
+       "0                             Adelaide,King,Richmond  \n",
+       "1                                          Agincourt  \n",
+       "2  Agincourt North,L'Amoreaux East,Milliken,Steel...  \n",
+       "3  Albion Gardens,Beaumond Heights,Humbergate,Jam...  \n",
+       "4                              Alderwood,Long Branch  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(data, columns=['PostalCode', 'Borough', 'Neighbourhood'])\n",
-    "df = df[(~df['PostalCode'].isnull()) & (df['Borough'] != 'Not assigned')]\n",
-    "df = df.groupby(['PostalCode', 'Borough'])['Neighbourhood'].apply(list)\n",
-    "df = pd.DataFrame(df)\n",
-    "df1 = df.sort_values(by=['Neighbourhood'])\n",
-    "df1 = df1.reset_index()\n",
-    "df1.head(10)"
+    "torn_data = df1.drop(['Neighbourhood'], axis= 1)\n",
+    "toronto_data = pd.merge(torn_data, neights1, left_index=True, right_index=True)\n",
+    "toronto_data.head()"
    ]
   },
   {
@@ -188,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +190,224 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.shape"
+    "toronto_data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal Code   Latitude  Longitude\n",
+       "0         M1B  43.806686 -79.194353\n",
+       "1         M1C  43.784535 -79.160497\n",
+       "2         M1E  43.763573 -79.188711\n",
+       "3         M1G  43.770992 -79.216917\n",
+       "4         M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path ='http://cocl.us/Geospatial_data'\n",
+    "dfl = pd.read_csv(path)\n",
+    "dfl.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M5H</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Adelaide,King,Richmond</td>\n",
+       "      <td>M5H</td>\n",
+       "      <td>43.650571</td>\n",
+       "      <td>-79.384568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1S</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Agincourt</td>\n",
+       "      <td>M1S</td>\n",
+       "      <td>43.794200</td>\n",
+       "      <td>-79.262029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1V</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Agincourt North,L'Amoreaux East,Milliken,Steel...</td>\n",
+       "      <td>M1V</td>\n",
+       "      <td>43.815252</td>\n",
+       "      <td>-79.284577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M9V</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Albion Gardens,Beaumond Heights,Humbergate,Jam...</td>\n",
+       "      <td>M9V</td>\n",
+       "      <td>43.739416</td>\n",
+       "      <td>-79.588437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M8W</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Alderwood,Long Branch</td>\n",
+       "      <td>M8W</td>\n",
+       "      <td>43.602414</td>\n",
+       "      <td>-79.543484</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PostalCode           Borough  \\\n",
+       "0        M5H  Downtown Toronto   \n",
+       "1        M1S       Scarborough   \n",
+       "2        M1V       Scarborough   \n",
+       "3        M9V         Etobicoke   \n",
+       "4        M8W         Etobicoke   \n",
+       "\n",
+       "                                       Neighbourhood Postal Code   Latitude  \\\n",
+       "0                             Adelaide,King,Richmond         M5H  43.650571   \n",
+       "1                                          Agincourt         M1S  43.794200   \n",
+       "2  Agincourt North,L'Amoreaux East,Milliken,Steel...         M1V  43.815252   \n",
+       "3  Albion Gardens,Beaumond Heights,Humbergate,Jam...         M9V  43.739416   \n",
+       "4                              Alderwood,Long Branch         M8W  43.602414   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.384568  \n",
+       "1 -79.262029  \n",
+       "2 -79.284577  \n",
+       "3 -79.588437  \n",
+       "4 -79.543484  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfc = pd.merge(toronto_data, dfl, left_on ='PostalCode', right_on = 'Postal Code')\n",
+    "dfc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
