--- a/Capstone_Lab2.ipynb
+++ b/Capstone_Lab2.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Capstone project - Toronto Neighborhoods\n",
+    "\n",
+    "### This  notebook is for build the code, to scrape and clean up Wikipedia page "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook I will to explore, segment, and cluster the neighborhoods in the city of Toronto. \n",
+    "\n",
+    "Firs, I let's download all the dependencies that we will need."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +30,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Download and Explore Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I used BeautifulSoup library to scrap the Wikipedia page. Then, I transforme the data in format requiered, cleaning data remove the Borough whit Not assigned and missings, and finally obtein a DataFrame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,30 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_names = ['Neighbourhood'] \n",
-    "neights1 = pd.DataFrame(columns=column_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prueba1 = df1.loc[:,'Neighbourhood']\n",
+    "column_names = ['Neighbor'] \n",
+    "neights = pd.DataFrame(columns=column_names)\n",
     "\n",
-    "for row in prueba1:\n",
-    "    prueba11 = ','.join(row)\n",
-    "    neights1 = neights1.append({'Neighbourhood' : prueba11}, ignore_index = True)"
+    "prueba = df1.loc[:,'Neighbourhood']\n",
+    "\n",
+    "for row in prueba:\n",
+    "    prueba1 = ','.join(row)\n",
+    "    neights = neights.append({'Neighbor' : prueba1}, ignore_index = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +132,7 @@
        "      <th></th>\n",
        "      <th>PostalCode</th>\n",
        "      <th>Borough</th>\n",
-       "      <th>Neighbourhood</th>\n",
+       "      <th>Neighbor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -153,7 +178,7 @@
        "3        M9V         Etobicoke   \n",
        "4        M8W         Etobicoke   \n",
        "\n",
-       "                                       Neighbourhood  \n",
+       "                                            Neighbor  \n",
        "0                             Adelaide,King,Richmond  \n",
        "1                                          Agincourt  \n",
        "2  Agincourt North,L'Amoreaux East,Milliken,Steel...  \n",
@@ -161,15 +186,15 @@
        "4                              Alderwood,Long Branch  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torn_data = df1.drop(['Neighbourhood'], axis= 1)\n",
-    "toronto_data = pd.merge(torn_data, neights1, left_index=True, right_index=True)\n",
-    "toronto_data.head()"
+    "torn_venues = df1.drop(['Neighbourhood'], axis= 1)\n",
+    "trt_venues = pd.merge(torn_venues, neights, left_index=True, right_index=True)\n",
+    "trt_venues.head()"
    ]
   },
   {
@@ -181,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -190,224 +215,14 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "toronto_data.shape"
+    "df1.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Postal Code</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M1B</td>\n",
-       "      <td>43.806686</td>\n",
-       "      <td>-79.194353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>M1C</td>\n",
-       "      <td>43.784535</td>\n",
-       "      <td>-79.160497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M1E</td>\n",
-       "      <td>43.763573</td>\n",
-       "      <td>-79.188711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M1G</td>\n",
-       "      <td>43.770992</td>\n",
-       "      <td>-79.216917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M1H</td>\n",
-       "      <td>43.773136</td>\n",
-       "      <td>-79.239476</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Postal Code   Latitude  Longitude\n",
-       "0         M1B  43.806686 -79.194353\n",
-       "1         M1C  43.784535 -79.160497\n",
-       "2         M1E  43.763573 -79.188711\n",
-       "3         M1G  43.770992 -79.216917\n",
-       "4         M1H  43.773136 -79.239476"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path ='http://cocl.us/Geospatial_data'\n",
-    "dfl = pd.read_csv(path)\n",
-    "dfl.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PostalCode</th>\n",
-       "      <th>Borough</th>\n",
-       "      <th>Neighbourhood</th>\n",
-       "      <th>Postal Code</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M5H</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Adelaide,King,Richmond</td>\n",
-       "      <td>M5H</td>\n",
-       "      <td>43.650571</td>\n",
-       "      <td>-79.384568</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>M1S</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Agincourt</td>\n",
-       "      <td>M1S</td>\n",
-       "      <td>43.794200</td>\n",
-       "      <td>-79.262029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M1V</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Agincourt North,L'Amoreaux East,Milliken,Steel...</td>\n",
-       "      <td>M1V</td>\n",
-       "      <td>43.815252</td>\n",
-       "      <td>-79.284577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M9V</td>\n",
-       "      <td>Etobicoke</td>\n",
-       "      <td>Albion Gardens,Beaumond Heights,Humbergate,Jam...</td>\n",
-       "      <td>M9V</td>\n",
-       "      <td>43.739416</td>\n",
-       "      <td>-79.588437</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M8W</td>\n",
-       "      <td>Etobicoke</td>\n",
-       "      <td>Alderwood,Long Branch</td>\n",
-       "      <td>M8W</td>\n",
-       "      <td>43.602414</td>\n",
-       "      <td>-79.543484</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  PostalCode           Borough  \\\n",
-       "0        M5H  Downtown Toronto   \n",
-       "1        M1S       Scarborough   \n",
-       "2        M1V       Scarborough   \n",
-       "3        M9V         Etobicoke   \n",
-       "4        M8W         Etobicoke   \n",
-       "\n",
-       "                                       Neighbourhood Postal Code   Latitude  \\\n",
-       "0                             Adelaide,King,Richmond         M5H  43.650571   \n",
-       "1                                          Agincourt         M1S  43.794200   \n",
-       "2  Agincourt North,L'Amoreaux East,Milliken,Steel...         M1V  43.815252   \n",
-       "3  Albion Gardens,Beaumond Heights,Humbergate,Jam...         M9V  43.739416   \n",
-       "4                              Alderwood,Long Branch         M8W  43.602414   \n",
-       "\n",
-       "   Longitude  \n",
-       "0 -79.384568  \n",
-       "1 -79.262029  \n",
-       "2 -79.284577  \n",
-       "3 -79.588437  \n",
-       "4 -79.543484  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfc = pd.merge(toronto_data, dfl, left_on ='PostalCode', right_on = 'Postal Code')\n",
-    "dfc.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -426,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
